--- a/client/src/app/rating/rating.component.scss
+++ b/client/src/app/rating/rating.component.scss
@@ -1,9 +1,4 @@
-ngb-rating { 
-    color: gold;
-    font-size: clamp(1rem, 2.5vw, 1.5rem);
-    margin: 0 0 auto auto;
-    float: right;
-}
+ngb-rating { color: gold; font-size: clamp(1rem, 2.5vw, 1.5rem); margin: 0 0 auto auto; float: right; }
 
 .default { margin-top: 0.75rem; }
 
